--- a/mail/rspamd/src/opnsense/service/templates/OPNsense/Rspamd/multimap.conf
+++ b/mail/rspamd/src/opnsense/service/templates/OPNsense/Rspamd/multimap.conf
@@ -15,7 +15,7 @@ WHITELIST_SENDER_DOMAIN {
   type = "from";
   filter = "email:domain";
   map = "/${LOCAL_CONFDIR}/local.d/whitelist_sender_domains.map";
-  score = -1000
+  score = -1000;
   }
 
 local_wl_from {
@@ -23,6 +23,7 @@ local_wl_from {
   map = "$CONFDIR/maps.d/local_wl_from.inc";
   symbol = "LOCAL_WL_FROM";
   description = "Whitelist map for LOCAL_WL_FROM";
+  score = -1000;
 }
 
 {% endif %}
